implements integration to gemini ia